--- a/.atomist.yml
+++ b/.atomist.yml
@@ -12,3 +12,17 @@ editor:
     - "follower": "survey-source"
     - "featureName": "SpringBoot.Structure"
 
+---
+kind: "operation"
+client: "com.atomist:rug"
+version: "1.0.0-20170608065255"
+editor:
+  name: "AddFeatureFollowerEditor"
+  group: "atomist"
+  artifact: "spring-team-handlers"
+  version: "0.2.26"
+  parameters:
+    - "broadcaster": "spring-rest-seed"
+    - "follower": "lizardspit"
+    - "featureName": "SpringBoot.Structure"
+
